# human-first-ai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  VISION.md
src/human_first_ai/: __init__.py  demo.py
src/human_first_ai/core/: __init__.py  intent.py  orchestrator.py
src/human_first_ai/memory/: __init__.py  store.py
src/human_first_ai/paihi/: __init__.py  score.py
src/human_first_ai/transparency/: __init__.py  log.py
src/human_first_ai/values/: __init__.py  engine.py
tests/: test_core.py  test_memory_store.py  test_paihi_score.py  test_values_engine.py
